--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,16 @@
 
 <head> 
 <title>Scala Puzzlers</title>
- <link rel="shortcut icon" href="img/favicon.gif" type="image/x-icon" />
- <link href="css/bootstrap.min.css" rel="stylesheet">
- <link href="css/prettify.css" type="text/css" rel="stylesheet" />
- <link href="css/main.css" type="text/css" rel="stylesheet" />
+ <link rel="shortcut icon" href="img/favicon.gif" type="image/x-icon">
+
+ <link href="/css/main.css" rel="stylesheet" type="text/css">
+ <link href="/vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+ <link href="/vendors/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+ <link href="/vendors/prettify.css" type="text/css" rel="stylesheet">
+ <link href="/vendors/codemirror-3.13/codemirror.css" type="text/css" rel="stylesheet">
+ <link href="/vendors/scalakata/solarized.css" rel="stylesheet" type="text/css">
+ <link href="/vendors/scalakata/code-mirror.css" rel="stylesheet" type="text/css">
+ <link href="/vendors/scalakata/kata.css" rel="stylesheet" type="text/css">
 </head>
 
 <body data-spy="scroll" data-target=".subnav" data-offset="50">
@@ -64,18 +70,21 @@
             <li><a href="#" id="pzzlr-030">Double Trouble</a></li>
             <li class="divider"></li>
           </ul>
-        </div><!--/.well -->
-      </div><!--/span3-->	
+        </div>
+      </div>
       <div class="span9">
         <div id="prime-space">
           {{ content }}
         <div id="disqus_thread" class="comments"></div>
-      </div><!--/span9-->                                
-    </div><!--/raw-fluid-->
-  </div><!--/container-fluid-->
-  <footer class="footer">Copyright &copy; 2013, Andrew Phillips and Nermin Serifovic</footer>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="js/prettify.js"></script>
-  <script type="text/javascript" src="js/puzzle.js"></script> 
+        <footer class="footer">Copyright &copy; 2013, Andrew Phillips and Nermin Serifovic</footer>
+      </div>
+    </div>
+  </div>
+	<script src="/vendors/jquery-1.9.0.min.js"></script>
+  <script src="/js/puzzle.js"></script>
+  <script src="/vendors/prettify.js"></script>
+  <script src="/vendors/codemirror-3.13/codemirror.js"></script>
+  <script src="/vendors/codemirror-3.13/clike.js"></script>
+  <script src="/vendors/scalakata/kata.js"></script>
 </body>
 </html>
