contribution explanation + kata
kata form open in new window when javascript is off
put back resize handle to split code with result
contribution explanation
keyboard shortcut to run

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,10 +23,10 @@
 				<a class="brand" href="{{site.baseurl}}">Scala ?uzz<img src="{{site.baseurl}}/img/l.png" alt="Scala Logo">ers</a>
         <div class="nav-collapse collapse">
           <ul class="nav">
-            <li><a href="{{site.baseurl}}index.html">Home</a></li>
-            <li><a href="{{site.baseurl}}contribute.html">How to Contribute</a></li>
-            <li><a href="{{site.baseurl}}contact.html">Contact</a></li>
-						<li><a href="{{site.baseurl}}about.html">About</a></li>
+            <li><a href="{{site.baseurl}}/index.html">Home</a></li>
+            <li><a href="{{site.baseurl}}/contribute.html">How to Contribute</a></li>
+            <li><a href="{{site.baseurl}}/contact.html">Contact</a></li>
+						<li><a href="{{site.baseurl}}/about.html">About</a></li>
           </ul>
         </div>
       </div>
