--- a/_layouts/puzzler.html
+++ b/_layouts/puzzler.html
@@ -40,7 +40,7 @@ layout: default
           </pre>
         {% endif %}
         {% if possibility[0] == page.solution %}
-          <form class="kata-form" action="http://localhost:9000/eval" method="post">
+          <form class="kata-form" action="http://localhost:9000/eval" method="post" target="_blank">
           <!-- <form class="kata-form" action="https://scalakatatwo.herokuapp.com/eval" method="post"> -->
               <div class="kata-code-wrap">
                   <textarea class="kata-code" name="code">
@@ -53,6 +53,7 @@ layout: default
                   </div>
               </div>
               <div class="kata-result-window hidden">
+                  <hr class="kata-vertical-resize-handle" />
                   <div class="kata-result-wrap">
                       <div class="CodeMirror">
                           <div class="CodeMirror-scroll cm-s-solarized-dark">
